--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tracing-fluentd"
 version = "0.1.0"
 authors = ["Douman <douman@gmx.se>"]
 edition = "2018"
-description = "Subscriber for fluentd"
+description = "Enables forwarding of `tracing` events towards the `fluentd` server."
 license = "BSL-1.0"
 repository = "https://github.com/DoumanAsh/tracing-fluentd"
 keywords = ["tracing", "fluentd"]
